fix: align about dialog footer

--- a/packages/frontend/src/components/dialogs/About/styles.module.scss
+++ b/packages/frontend/src/components/dialogs/About/styles.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   text-align: center;
   align-items: center;
+  margin-bottom: 20px;
 
   img {
     width: 40%;
@@ -11,10 +12,4 @@
 
 .appName {
   margin-bottom: 15px;
-}
-
-.buttonContainer {
-  display: flex;
-  margin: 42px 0;
-  gap: 20px;
 }
